# music-tagger

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  tag_reader.cpp  tag_writer.cpp  tagreader.cpp
